# dotfiles

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.json  .prettierignore  .prettierrc.cjs  .ruff.toml  .taplo.toml  .yamllint.yml  Brewfile  EFFICIENCY_REPORT.md  README.md  Xresources  commitlint.config.cjs  emacs.el  flake.nix  ghci  gitconfig  gitignore  netrc.gpg  npmrc  pyproject.toml  pythonstartup  setup.fish  setup.sh  zlogin  zshrc  zshrc.personal
.github/workflows/: ci.yml  update-ai-tools.yml  update-cursor.yml  update-flake.yml  update-vscode-extensions.yml  update-vscode-insiders.yml
bundle/: config
claude/: settings.json
config/claudius/: .gitignore  README.md  claude.settings.json  codex.managed_config.toml  codex.requirements.toml  codex.settings.toml  gemini.settings.json  justfile  mcpServers.json  settings.json
emacs.d/: .gitignore  emacs.d
function/: add_nix_channels.sh  checked_gatekeeper_quarantine_flag.sh  detect_system.sh  error.sh  go.sh  go_resolver.sh
scripts/: README.md  build-ai-tools.sh  commitlint-pre-push.sh  common.py  test-claudius-skills.py  test-update-codex-cli.py  test-update-cursor.py  update-ai-tools-all.sh  update-claude-code.py  update-codex-cli.py  update-cursor.py  update-droid.py  update-gemini-cli.py  update-vscode-extensions.py  update-vscode-insiders.py  update_lib.py
xmonad/: .gitignore  CHANGELOG.md  LICENSE  cabal.project  default.nix  flake.nix  hie.yaml  myxmonad.cabal  xmonad.hs
xmonad/dep/nixpkgs/: github.json
zsh_functions/: aws_credential_exporter.zsh  ini_parser.zsh  random_cowsay.zsh
(+382 files in other folders)
