cabal-version:      3.0
name:               myxmonad
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Talafumi Asano
maintainer:         cariandrum22@gmail.com
extra-source-files: CHANGELOG.md

executable myxmonad
  main-is:          xmonad.hs
  build-depends:
    , base
    , Cabal
    , containers
    , dbus
    , utf8-string
    , X11
    , xmonad
    , xmonad-contrib

  default-language: Haskell2010
